5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1888_3179.log
== TEST (2019-07-09 16:08:00) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
for i in range(a):
	b[i]=b[i]-1
print(b)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:31) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
for i in range(a):
	b[i]=b[i]-1
print(b)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:48) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if(a[i]=1):
		c=c+1
d=0
for i in range(size(a)):
	if(a[i]=1):
		b[d]=a[i]
	elif(a[i]=1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
File "XXXX", line 6
    if(a[i]=1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:28) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:51) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:18) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:14) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:47) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:57) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]==1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:29) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]!=1):
		b[d]=a[i]
	elif(a[i]==1):
		b[c]=a[i]
		c=c+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]!=1):
		b[d]=a[i]

print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:12) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]!=1):
		b[d]=a[i]
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:44) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]!=1):
		b[d]=a[i]
		d=d+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:07) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=0
for i in range(size(a)-1):
	if(a[i]!=1):
		b[d]=a[i]
		d=d+1
print(b)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=zeros(a, dtype=int)
e=0
for i in range(size(a)-1):
	if(a[i]!=1):
		d[e]=a[i]
		e=e+!
print(d)		
	
		
	

-- ERROR:
File "XXXX", line 13
    e=e+!
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:50) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=zeros(a, dtype=int)
e=0
for i in range(size(a)-1):
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:06) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=zeros(c, dtype=int)
e=0
for i in range(size(a)-1):
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=zeros(c, dtype=int)
e=0
for i in range(size(a)-1):
	if(a[i]==1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:57) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if(a[i]==1):
		c=c+1
d=zeros(c, dtype=int)
e=0
for i in range(size(a)-1):
	if(a[i]==1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:07) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if(i!=1):
		c=c+1
d=zeros(c-1, dtype=int)
e=0
for i in a:
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:45) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if(i!=1):
		c=c+1
d=zeros(c-1, dtype=int)
e=0
for i in a:
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
print(d)		
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:53:02) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if(i!=1):
		c=c+1
d=zeros(c-1, dtype=int)
e=0
for i in a:
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
	else:
		b[c]=a[i]
print(d)		
	
		
	

-- EXECUTION TIME:
1.01343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3179/main.py", line 3, in <module>
    b=zeros(a, dtype=int)
ValueError: negative dimensions are not allowed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-08-14 20:00:00) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if(i!=1):
		c=c+1
d=zeros(c-1, dtype=int)
e=0
for i in a:
	if(a[i]!=1):
		d[e]=a[i]
		e=e+1
	else:
		b[c]=
print(d)		
	
		
	

-- ERROR:
File "XXXX", line 15
    b[c]=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
